--- a/DiceMaster3600/View/Controls/YahtzeeTable.xaml
+++ b/DiceMaster3600/View/Controls/YahtzeeTable.xaml
@@ -7,7 +7,7 @@
              xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
              xmlns:enums="clr-namespace:DiceMaster3600.Core.Enum;assembly=DiceMaster3600.Core"
              xmlns:control="clr-namespace:DiceMaster3600.View.Controls"
-             d:DataContext="{d:DesignInstance Type=vm:YahtzeeViewModel, IsDesignTimeCreatable=True}"           
+             d:DataContext="{d:DesignInstance Type=vm:YahtzeeViewModel}"           
              mc:Ignorable="d">
 
     <UserControl.Resources>
@@ -88,44 +88,44 @@
                 <control:YahtzeeInteractiveRow Grid.Row="1" Grid.ColumnSpan="3"
                                                CommandParameter="{x:Static enums:ScoreTypes.Aces}"
                                                ScoreName="Aces"
-                                               IsEnabled="{Binding Scores[Aces].IsSelected, FallbackValue=False}"
+                                               IsEnabled="{Binding Scores[0].IsSelected, FallbackValue=False}"
                                                HowToScore="Count Only Aces"
-                                               Score="{Binding Scores[Aces].Score, FallbackValue=0}"/>
+                                               Score="{Binding Scores[0].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="2" Grid.ColumnSpan="3"
                                                CommandParameter="{x:Static enums:ScoreTypes.Twos}"
                                                ScoreName="Twos"
-                                               IsEnabled="{Binding Scores[Twos].IsSelected, FallbackValue=False}"
+                                               IsEnabled="{Binding Scores[1].IsSelected, FallbackValue=False}"
                                                HowToScore="Count Only Twos"
-                                               Score="{Binding Scores[Twos].Score, FallbackValue=0}"/>
+                                               Score="{Binding Scores[1].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="3" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.Threes}"
                                    ScoreName="Threes"
-                                   IsEnabled="{Binding Scores[Threes].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[2].IsSelected, FallbackValue=False}"
                                    HowToScore="Count Only Threes"
-                                   Score="{Binding Scores[Threes].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[2].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="4" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.Fours}"
                                    ScoreName="Fours"
-                                   IsEnabled="{Binding Scores[Fours].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[3].IsSelected, FallbackValue=False}"
                                    HowToScore="Count Only Fours"
-                                   Score="{Binding Scores[Fours].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[3].Score, FallbackValue=0}"/>
                 
                 <control:YahtzeeInteractiveRow Grid.Row="5" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.Fives}"
                                    ScoreName="Fives"
-                                   IsEnabled="{Binding Scores[Fives].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[4].IsSelected, FallbackValue=False}"
                                    HowToScore="Count Only Fives"
-                                   Score="{Binding Scores[Fives].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[4].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="6" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.Sixes}"
                                    ScoreName="Sixes"
-                                   IsEnabled="{Binding Scores[Sixes].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[5].IsSelected, FallbackValue=False}"
                                    HowToScore="Count Only Sixes"
-                                   Score="{Binding Scores[Sixes].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[5].Score, FallbackValue=0}"/>
 
                 <Label Grid.Row="7" Grid.Column="0" Content="TOTAL SCORE" Style="{StaticResource TotalLabelStyle}"/>
                 <materialIcons:MaterialIcon Grid.Row="7" Grid.Column="1" Style="{StaticResource ArrowRightBoldBoxStyle}"/>
@@ -173,51 +173,51 @@
                 <control:YahtzeeInteractiveRow Grid.Row="1" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.ThreeOfAKind}"
                                    ScoreName="Three of a kind"
-                                   IsEnabled="{Binding Scores[ThreeOfAKind].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[6].IsSelected, FallbackValue=False}"
                                    HowToScore="Total of all 5 dices"
-                                   Score="{Binding Scores[ThreeOfAKind].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[6].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="2" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.FourOfAKind}"
                                    ScoreName="Four of a kind"
-                                   IsEnabled="{Binding Scores[FourOfAKind].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[7].IsSelected, FallbackValue=False}"
                                    HowToScore="Total of all 5 dices"
-                                   Score="{Binding Scores[FourOfAKind].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[7].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="3" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.FullHouse}"
                                    ScoreName="Full house"
-                                   IsEnabled="{Binding Scores[FullHouse].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[8].IsSelected, FallbackValue=False}"
                                    HowToScore="25 points"
-                                   Score="{Binding Scores[FullHouse].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[8].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="4" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.SmallStraight}"
                                    ScoreName="Small Straight"
-                                   IsEnabled="{Binding Scores[SmallStraight].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[9].IsSelected, FallbackValue=False}"
                                    HowToScore="30 points"
-                                   Score="{Binding Scores[SmallStraight].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[9].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="5" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.LargeStraight}"
                                    ScoreName="Large Straight"
-                                   IsEnabled="{Binding Scores[LargeStraight].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[10].IsSelected, FallbackValue=False}"
                                    HowToScore="40 points"
-                                   Score="{Binding Scores[LargeStraight].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[10].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="6" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.HighestScore}"
                                    ScoreName="Highest Score"
-                                   IsEnabled="{Binding Scores[HighestScore].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[11].IsSelected, FallbackValue=False}"
                                    HowToScore="50 points"
-                                   Score="{Binding Scores[HighestScore].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[11].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="7" Grid.ColumnSpan="3"
                                    CommandParameter="{x:Static enums:ScoreTypes.Chance}"
                                    ScoreName="Chance"
-                                   IsEnabled="{Binding Scores[Chance].IsSelected, FallbackValue=False}"
+                                   IsEnabled="{Binding Scores[12].IsSelected, FallbackValue=False}"
                                    HowToScore="Total of all 5 dices"
-                                   Score="{Binding Scores[Chance].Score, FallbackValue=0}"/>
+                                   Score="{Binding Scores[12].Score, FallbackValue=0}"/>
 
                 <Label Grid.Row="8" Grid.Column="0" Style="{StaticResource TotalLabelStyle}" Padding="10"/>
                 <TextBlock Grid.Row="8" TextAlignment="Center" VerticalAlignment="Center">
