--- a/DiceMaster3600/View/Controls/YahtzeeTable.xaml
+++ b/DiceMaster3600/View/Controls/YahtzeeTable.xaml
@@ -86,46 +86,58 @@
                 <Label Grid.Row="0" Name="Header3" Grid.Column="2" Content="GAME #1" Style="{StaticResource HeaderStyle}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="1" Grid.ColumnSpan="3"
+                                               SelectCategoryCommand="{Binding ScoreCommand}"
                                                CommandParameter="{x:Static enums:ScoreTypes.Aces}"
                                                ScoreName="Aces"
-                                               IsEnabled="{Binding Scores[0].IsSelected, FallbackValue=False}"
+                                               HasBeenScored="{Binding YahtzeeModels[0].HasBeenScored}"
+                                               IsEnabled="{Binding YahtzeeModels[0].IsSelected, FallbackValue=False}"
                                                HowToScore="Count Only Aces"
-                                               Score="{Binding Scores[0].Score, FallbackValue=0}"/>
+                                               Score="{Binding YahtzeeModels[0].Score }"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="2" Grid.ColumnSpan="3"
+                                               SelectCategoryCommand="{Binding ScoreCommand}"
                                                CommandParameter="{x:Static enums:ScoreTypes.Twos}"
                                                ScoreName="Twos"
-                                               IsEnabled="{Binding Scores[1].IsSelected, FallbackValue=False}"
+                                               HasBeenScored="{Binding YahtzeeModels[1].HasBeenScored}"
+                                               IsEnabled="{Binding YahtzeeModels[1].IsSelected, FallbackValue=False}"
                                                HowToScore="Count Only Twos"
-                                               Score="{Binding Scores[1].Score, FallbackValue=0}"/>
+                                               Score="{Binding YahtzeeModels[1].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="3" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.Threes}"
                                    ScoreName="Threes"
-                                   IsEnabled="{Binding Scores[2].IsSelected, FallbackValue=False}"
+                                   HasBeenScored="{Binding YahtzeeModels[2].HasBeenScored}"
+                                   IsEnabled="{Binding YahtzeeModels[2].IsSelected, FallbackValue=False}"
                                    HowToScore="Count Only Threes"
-                                   Score="{Binding Scores[2].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[2].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="4" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.Fours}"
                                    ScoreName="Fours"
-                                   IsEnabled="{Binding Scores[3].IsSelected, FallbackValue=False}"
+                                   HasBeenScored="{Binding YahtzeeModels[3].HasBeenScored}"
+                                   IsEnabled="{Binding YahtzeeModels[3].IsSelected, FallbackValue=False}"
                                    HowToScore="Count Only Fours"
-                                   Score="{Binding Scores[3].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[3].Score, FallbackValue=0}"/>
                 
                 <control:YahtzeeInteractiveRow Grid.Row="5" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.Fives}"
                                    ScoreName="Fives"
-                                   IsEnabled="{Binding Scores[4].IsSelected, FallbackValue=False}"
+                                   HasBeenScored="{Binding YahtzeeModels[4].HasBeenScored}"
+                                   IsEnabled="{Binding YahtzeeModels[4].IsSelected, FallbackValue=False}"
                                    HowToScore="Count Only Fives"
-                                   Score="{Binding Scores[4].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[4].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="6" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.Sixes}"
                                    ScoreName="Sixes"
-                                   IsEnabled="{Binding Scores[5].IsSelected, FallbackValue=False}"
+                                   HasBeenScored="{Binding YahtzeeModels[5].HasBeenScored}"
+                                   IsEnabled="{Binding YahtzeeModels[5].IsSelected, FallbackValue=False}"
                                    HowToScore="Count Only Sixes"
-                                   Score="{Binding Scores[5].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[5].Score, FallbackValue=0}"/>
 
                 <Label Grid.Row="7" Grid.Column="0" Content="TOTAL SCORE" Style="{StaticResource TotalLabelStyle}"/>
                 <materialIcons:MaterialIcon Grid.Row="7" Grid.Column="1" Style="{StaticResource ArrowRightBoldBoxStyle}"/>
@@ -171,53 +183,67 @@
                 <Label Grid.Row="0" Grid.Column="2" Content="GAME #1" Style="{StaticResource HeaderStyle}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="1" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.ThreeOfAKind}"
                                    ScoreName="Three of a kind"
-                                   IsEnabled="{Binding Scores[6].IsSelected, FallbackValue=False}"
+                                   HasBeenScored="{Binding YahtzeeModels[6].HasBeenScored}"
+                                   IsEnabled="{Binding YahtzeeModels[6].IsSelected, FallbackValue=False}"
                                    HowToScore="Total of all 5 dices"
-                                   Score="{Binding Scores[6].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[6].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="2" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.FourOfAKind}"
                                    ScoreName="Four of a kind"
-                                   IsEnabled="{Binding Scores[7].IsSelected, FallbackValue=False}"
+                                   HasBeenScored="{Binding YahtzeeModels[7].HasBeenScored}"         
+                                   IsEnabled="{Binding YahtzeeModels[7].IsSelected, FallbackValue=False}"
                                    HowToScore="Total of all 5 dices"
-                                   Score="{Binding Scores[7].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[7].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="3" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.FullHouse}"
                                    ScoreName="Full house"
-                                   IsEnabled="{Binding Scores[8].IsSelected, FallbackValue=False}"
+                                   HasBeenScored="{Binding YahtzeeModels[8].HasBeenScored}" 
+                                   IsEnabled="{Binding YahtzeeModels[8].IsSelected, FallbackValue=False}"
                                    HowToScore="25 points"
-                                   Score="{Binding Scores[8].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[8].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="4" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.SmallStraight}"
                                    ScoreName="Small Straight"
-                                   IsEnabled="{Binding Scores[9].IsSelected, FallbackValue=False}"
+                                   HasBeenScored="{Binding YahtzeeModels[9].HasBeenScored}" 
+                                   IsEnabled="{Binding YahtzeeModels[9].IsSelected, FallbackValue=False}"
                                    HowToScore="30 points"
-                                   Score="{Binding Scores[9].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[9].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="5" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.LargeStraight}"
                                    ScoreName="Large Straight"
-                                   IsEnabled="{Binding Scores[10].IsSelected, FallbackValue=False}"
+                                   HasBeenScored="{Binding YahtzeeModels[10].HasBeenScored}" 
+                                   IsEnabled="{Binding YahtzeeModels[10].IsSelected, FallbackValue=False}"
                                    HowToScore="40 points"
-                                   Score="{Binding Scores[10].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[10].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="6" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.HighestScore}"
-                                   ScoreName="Highest Score"
-                                   IsEnabled="{Binding Scores[11].IsSelected, FallbackValue=False}"
+                                   ScoreName="Highest Score"                                               
+                                   HasBeenScored="{Binding YahtzeeModels[11].HasBeenScored}" 
+                                   IsEnabled="{Binding YahtzeeModels[11].IsSelected, FallbackValue=False}"
                                    HowToScore="50 points"
-                                   Score="{Binding Scores[11].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[11].Score, FallbackValue=0}"/>
 
                 <control:YahtzeeInteractiveRow Grid.Row="7" Grid.ColumnSpan="3"
+                                   SelectCategoryCommand="{Binding ScoreCommand}"
                                    CommandParameter="{x:Static enums:ScoreTypes.Chance}"
                                    ScoreName="Chance"
-                                   IsEnabled="{Binding Scores[12].IsSelected, FallbackValue=False}"
+                                   HasBeenScored="{Binding YahtzeeModels[12].HasBeenScored}" 
+                                   IsEnabled="{Binding YahtzeeModels[12].IsSelected, FallbackValue=False}"
                                    HowToScore="Total of all 5 dices"
-                                   Score="{Binding Scores[12].Score, FallbackValue=0}"/>
+                                   Score="{Binding YahtzeeModels[12].Score, FallbackValue=0}"/>
 
                 <Label Grid.Row="8" Grid.Column="0" Style="{StaticResource TotalLabelStyle}" Padding="10"/>
                 <TextBlock Grid.Row="8" TextAlignment="Center" VerticalAlignment="Center">
