--- a/DiceMaster3600/View/Controls/YahtzeeTable.xaml
+++ b/DiceMaster3600/View/Controls/YahtzeeTable.xaml
@@ -53,14 +53,14 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid IsEnabled="{Binding IsEnabled}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="20"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <Border>
+        <Border >
             <Grid>
                 
                 <Grid.RowDefinitions>
