--- a/DiceMaster3600/View/LoginForm.xaml
+++ b/DiceMaster3600/View/LoginForm.xaml
@@ -77,7 +77,8 @@
                              BorderThickness="0,0,0,1" 
                              FontSize="15"/>
                 <Button x:Name="btnLogin" 
-                        Content="LOGIN"/>
+                        Content="LOGIN"
+                                                Command="{Binding Path=SingUpCMD}"/>
                 <TextBlock Text="Not a Member?" 
                            Foreground="#FF2196F3" 
                            HorizontalAlignment="Center" 
@@ -85,7 +86,7 @@
                            Margin="0,10,0,0"/>
                 <Button BorderThickness="0" 
                         Padding="10,0"  
-                        Command="{Binding Path=SingUpCMD}"
+                        Command="{Binding Path=RegisterCMD}"
                         HorizontalAlignment="Center" 
                         Content="Sing Up" 
                         Background="White" 
