Delete Password from User Entity

--- a/DiceMaster3600/MainWindow.xaml
+++ b/DiceMaster3600/MainWindow.xaml
@@ -106,7 +106,9 @@
                          Command="{Binding MenuCommad}"
                          Style="{StaticResource menuButtonStyle}"/>
             <RadioButton Content="Admin Panel"
-                         Style="{StaticResource menuButtonStyle}"/>
+                         Style="{StaticResource menuButtonStyle}"
+                         Command="{Binding MenuCommad}"
+                         CommandParameter="{x:Static enum:MenuControlType.AdminPanel}"/>
         </StackPanel>
 
         <ScrollViewer Grid.Row="2" 
